lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_minimal.snap
---
source: lib/src/sdk/python/mod.rs
expression: "get_file(&output, \"client.py\")"
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from typing import Optional
from .runtime import CliResult, CliRunner

class Hello:
    def __init__(self, bin_path: str = "hello") -> None:
        self._runner = CliRunner(bin_path)

    def exec(self) -> CliResult:
        cmd_args: list[str] = []
        return self._runner.run(cmd_args)
