lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_optional_arg_empty_flags.snap
---
source: lib/src/sdk/python/mod.rs
expression: types
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from dataclasses import dataclass
from typing import Literal, Optional



@dataclass
class AppArgs:
    # Optional arg without default
    name: Optional[str] = None


@dataclass
class CheckArgs:
    # Required arg
    target: str
    # Optional arg with default
    mode: Optional[str] = "quick"
