lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_optional_variadic_arg.snap
---
source: lib/src/sdk/python/mod.rs
expression: client
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from typing import Optional
from .runtime import CliResult, CliRunner
from .types import ToolArgs

class Tool:
    def __init__(self, bin_path: str = "tool") -> None:
        self._runner = CliRunner(bin_path)

    def exec(self, args: ToolArgs) -> CliResult:
        """[files]…"""
        cmd_args: list[str] = []
        if args.files is not None: cmd_args.extend(args.files)
        return self._runner.run(cmd_args)
