lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_required_flag_type.snap
---
source: lib/src/sdk/python/mod.rs
expression: types
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from dataclasses import dataclass
from typing import Literal, Optional



@dataclass
class ToolFlags:
    # Auth token
    token: str
