lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_types.snap
---
source: lib/src/sdk/python/mod.rs
expression: "get_file(&output, \"types.py\")"
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from dataclasses import dataclass
from typing import Literal, Optional


Arg2Choice = Literal["choice1", "choice2", "choice3"]
ShellChoice = Literal["bash", "zsh", "fish"]


@dataclass
class MycliArgs:
    # arg1 description
    arg1: str
    # arg3 description
    arg3: str
    argrest: list[str]
    # arg2 description
    arg2: Optional[Arg2Choice] = "default value"
    with_default: Optional[str] = "default value"


@dataclass
class MycliFlags:
    # flag1 description
    flag1: Optional[bool] = None
    # flag2 description
    flag2: Optional[bool] = None
    # flag3 description
    flag3: Optional[bool] = None
    with_default: Optional[bool] = None  # default: default value
    shell: Optional[ShellChoice] = None


@dataclass
class InstallArgs:
    plugin: str
    version: str


@dataclass
class InstallFlags:
    # Short: -g
    _global: Optional[bool] = None
    # Short: -d
    _dir: Optional[str] = None
    # Short: -f
    force: Optional[bool] = None
