lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_var_value_flag_with_default.snap
---
source: lib/src/sdk/python/mod.rs
expression: types
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from dataclasses import dataclass
from typing import Literal, Optional



@dataclass
class ToolFlags:
    # Tags
    tag: Optional[list[str]] = None  # default: latest
